fixing images looking distorted tp7

--- a/docs/recipe-minisite/styles.css
+++ b/docs/recipe-minisite/styles.css
@@ -147,8 +147,9 @@ li {
 
 #steps img {
     width: 100%;
-    height: 360px;
+    height: auto;
     display: block;
+    object-fit: contain;
 }
 
 #acknowledgements {
@@ -202,8 +203,7 @@ li {
     }
 
     #steps img {
-        height: 1100px;
-        width: 100%;
+        max-height: 1100px;
     }
 
     #acknowledgements {
